# OmniBox

./: .gitignore  FORUM_POST.md  LICENSE.md  README.md  SUPPORT.md
.github/workflows/: firmware-release.yml
docs/: README.md
firmware/: ARCHITECTURE.md  CMakeLists.txt  README.md
firmware/cmake/: arm-gcc.cmake
firmware/linker/: STM32H723ZGTx.ld
firmware/src/: main.c
firmware/src/board/: board.c  board.h  matrix_map.h  stm32h7xx_hal_conf.h  stm32h7xx_it.c
firmware/src/drivers/: drivers.c  drivers.h  mcp2518fd.c  mcp2518fd.h
firmware/src/elm327/: elm327.c  elm327.h  elm327_glue.c  elm327_glue.h
firmware/src/j2534/: isotp.c  isotp.h  j2534_core.c  j2534_core.h  j2534_defs.h  j2534_filter.c  j2534_filter.h  j2534_wire.c  j2534_wire.h  kline_asm.c  kline_asm.h  trace.c  trace.h
firmware/src/transport/: protocol.c  protocol.h
firmware/src/usb/: tusb_config.h  usb_descriptors.c  usb_mode.c  usb_mode.h  usb_transport.c
hardware/omnibox-v1/: fp-lib-table  omnibox-v1.kicad_dru  omnibox-v1.kicad_pro  omnibox-v1.kicad_sch
hardware/omnibox-v1/enclosure/: README.md
hardware/omnibox-v1/enclosure/print3d/: README.md
hardware/omnibox-v1/enclosure/sheetmetal/: README.md
hardware/omnibox-v1/fp-lib/j2534.pretty/: LM61460_VQFN-HR-14.kicad_mod  L_Coupled_1260.kicad_mod  TVS_DO-218AB.kicad_mod  Transformer_Wuerth_750315371.kicad_mod
hardware/omnibox-v1/production/: bom-consolide.csv
hardware/omnibox-v1/production/local-finish/: README.md  j2534-local-finish-scripted.kicad_prl  j2534-local-finish-scripted.kicad_pro
hardware/omnibox-v1/production/local-finish/gerber/: j2534-local-finish-scripted-B_Paste.gbr  j2534-local-finish-scripted-Board Layer Stack Bottom Overlay.gbr  j2534-local-finish-scripted-Board Layer Stack Bottom Solder.gbr  j2534-local-finish-scripted-Bottom Layer.gbr  j2534-local-finish-scripted-Edge_Cuts.gbr  j2534-local-finish-scripted-F_Paste.gbr  j2534-local-finish-scripted-Ground Inner 1.gbr  j2534-local-finish-scripted-Ground Inner 4.gbr  j2534-local-finish-scripted-Inner 2.gbr  j2534-local-finish-scripted-NPTH.drl  j2534-local-finish-scripted-PTH.drl  j2534-local-finish-scripted-Power Inner 3.gbr  j2534-local-finish-scripted-Top Layer.gbr  j2534-local-finish-scripted-Top Overlay.gbr  j2534-local-finish-scripted-Top Solder.gbr  (+2 more)
hardware/omnibox-v1/sheets/: can_fd.kicad_sch  connector_db25.kicad_sch  feps.kicad_sch  isolation_barrier.kicad_sch  kline.kicad_sch  mcu.kicad_sch  power_protection.kicad_sch  routing_matrix.kicad_sch  swcan_j1850.kicad_sch  sym-lib-table  usb_isolated.kicad_sch
hardware/omnibox-v1/sym-lib/: j2534_local.kicad_sym  j2534gen.kicad_sym
host/: README.md
host/dll/: Makefile  j2534.def  j2534.h  j2534_dll.c  j2534_register.reg  j2534_winusb.inf  transport_select.c  transport_select.h  transport_winusb.c  transport_winusb.h
host/ptcore/: pt_core.c  pt_core.h
host/shared/: j2534_abi.h  pt_frame.c  pt_frame.h  pt_proto.h  pt_transport.h  pt_wire.c  pt_wire.h  transport_tcp.c  transport_tcp.h
host/test/: run_tests.sh  test_e2e.c  test_elm327.c  test_frame.c  test_tcp.c
host/tools/: Makefile  README.md  j2534mode.c  j2534mode_gui.c
host/vdevice/: Makefile  mock_bus.c  usb_mode_stub.c  vdevice.c  vdevice.h  vdevice_server.c  vlog.c  vlog.h
